
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline unsigned long
rotate_reg (unsigned long sor, unsigned long rrb, unsigned long reg)
{
 reg += rrb;
 if (reg >= sor)
  reg -= sor;
 return reg;
}
